ADDED MORE FONTS

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,22 @@
 body { 
-    background-color: fuchsia;
+    background-color:cadetblue
+}
+
+
+
+p {
+    font-family: sans-serif;
+    text-align: center;
+    color: darkred;
+
+
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:darkred;
+    font-style: normal;
+    text-align: center;
+
+
 }
