--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,21 @@ h1,h2,h3,h4,h5,h6 {
 
 
 }
+
+
+
+
+
+
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 150px;
+    color: aliceblue;
+    font-style: normal;
+
+}
+
+
+h2{
+    color: black;
+}
