--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,34 @@ h2{
     font-size: 40px;
     text-align: center;
 }
+
+
+ul {
+    list-style-type:square;
+}
+
+ol {
+    list-style-type: upper-roman;
+}
+
+li {
+    color: aliceblue;
+    font-size: 20px;
+    font-size: bold;
+}
+
+.fave{
+    color: orangered;
+}
+
+.pizza {
+    width: 50%;
+}
+
+
+
+
+
+a{
+    color: white;
+}
